plugins {
    id "java-library"
    id "maven-publish"
    id "signing"
}

ext {
    reactorVersion = "3.6.6"
}

subprojects {
    apply plugin: "java"
    apply plugin: "maven-publish"
    apply plugin: "signing"

    version = "0.7.5"
    group = "io.github.pellse"

    repositories {
        mavenCentral()
    }

    java {
        withJavadocJar()
        withSourcesJar()
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        testImplementation("org.junit.jupiter:junit-jupiter:5.8.1")
        testImplementation("org.hamcrest:hamcrest-library:1.3")
    }

    tasks.withType(JavaExec).configureEach {
        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
            jvmArgs += [
                    "-XX:+AllowRedefinitionToAddDeleteMethods"
            ]
        }
    }

    tasks.withType(Test).configureEach {
        if (JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_13)) {
            jvmArgs += [
                    "-XX:+AllowRedefinitionToAddDeleteMethods"
            ]
        }
    }

    test {
        useJUnitPlatform {
            includeEngines "junit-jupiter"
            testLogging {
                events("passed", "skipped", "failed")
            }
        }
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java

                pom {
                    name = project.name
                    packaging = "jar"
                    description = "Small library allowing to efficiently assemble entities from querying/merging external datasources or aggregating microservices"
                    url = "https://github.com/pellse/assembler"

                    scm {
                        connection = "scm:git@github.com:pellse/assembler.git"
                        developerConnection = "scm:git@github.com:pellse/assembler.git"
                        url = "https://github.com/pellse/assembler"
                    }

                    licenses {
                        license {
                            name = "The Apache License, Version 2.0"
                            url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                        }
                    }

                    developers {
                        developer {
                            name = "Sebastien Pelletier"
                        }
                    }
                }
            }
        }

        repositories {
            maven {
                name = "ossrh"
                url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
                credentials {
                    username = findProperty("ossrhUsername")
                    password = findProperty("ossrhPassword")
                }
            }
        }
    }

    signing {
        sign publishing.publications.mavenJava
    }
}
